# turbogen

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_uninstall.cmake.in  distclean.cmake  functions.f90  post_process.jl  rgm.f90
cmake/: README.md
cmake/Modules/: FindFFTW3.cmake  FindMKL.cmake  SetFortranFlags.cmake  SetParallelizationLibrary.cmake
data/cbc/: cbc_e_2.txt  cbc_r11_254.txt  cbc_r11_508.txt  turbulence_statistics.jl
data/isosigma1_5/: README.md
fig/: README.md
julia_src/: README.md  post_process.jl  turbulence_statistics.jl
julia_src/turbogen/: CrossSpectrumSVD.jl  FailedSVDCases.jl  GenerateInhomogeneous.jl  gather_svd.jl  gather_svd.sh  inhomogeneous_mpi.sh  svd.jl  svd.py  svd_mpi.sh  svd_new.py  turbogen.py
scripts/: F18_waveform.inp  cbc_gather_2d.jl  cbc_lateral.txt  cbc_longitudinal.txt  cbc_plots_2d.jl  cbc_statistics_2d.jl  convert_to_pascals.jl  domain.inp  grid.inp  input.inp  job_array.sh  lowboom_waveform.inp  pturbogen.jl  turbogen_slurm.sh  turbogenstatistics.jl  waveform.inp
scripts/extra/: job_array.sh  pturbogen.jl  turbogenstatistics.jl
src/base/: CMakeLists.txt  fftwfft.f90  functions.f90  sbabl_hdf5.f90  special_functions.f90  turbulence.f90
src/main/: CMakeLists.txt  main.f90  main2_old.f90  main_old.f90
