# Source files for turbogen base library
ADD_LIBRARY(${TURBOBASELIB} STATIC ${SRCBASE}/functions.f90
	${SRCBASE}/special_functions.f90
	${MKL_INCLUDE_DIR}/mkl_dfti.f90 )
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS} ${MKL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${TURBOBASELIB} ${HDF5_Fortran_LIBRARIES}
	${LIB_MKL_RT})
IF(USE_MPI)
	SET_TARGET_PROPERTIES(${SBDIFFBASELIB} PROPERTIES
                          COMPILE_FLAGS "${MPI_Fortran_COMPILE_FLAGS}"
                          LINK_FLAGS "${MPI_Fortran_LINK_FLAGS}")
    	INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_PATH})
	TARGET_LINK_LIBRARIES(${TURBOBASELIB} ${MPI_Fortran_LIBRARIES})
ENDIF(USE_MPI)
