ADD_LIBRARY(${TURBOBASELIB} STATIC ${SRCBASE}/turbulence.f90 ${SRCBASE}/fftwfft.f90 ${SRCBASE}/sbabl_hdf5.f90)
SET_TARGET_PROPERTIES(${TURBOBASELIB} PROPERTIES COMPILE_FLAGS "${MPI_Fortran_COMPILE_FLAGS}" LINK_FLAGS "${MPI_Fortran_LINK_FLAGS}")
INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS} ${FFTW_INCLUDE_DIRS}  ${MPI_Fortran_INCLUDE_PATH}) 
TARGET_LINK_LIBRARIES(${TURBOBASELIB} ${HDF5_Fortran_LIBRARIES} ${FFTW_LIBRARIES} ${MPI_Fortran_LIBRARIES})
