SET(main_src ${SRCMAIN}/main.f90)
ADD_EXECUTABLE(${MAINEXE} ${main_src})
TARGET_LINK_LIBRARIES(${MAINEXE} ${TURBOBASELIB}) # Link base library
SET_TARGET_PROPERTIES(${MAINEXE} PROPERTIES COMPILE_FLAGS "${MPI_Fortran_COMPILE_FLAGS}" LINK_FLAGS "${MPI_Fortran_LINK_FLAGS}")
INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_PATH} ${HDF5_INCLUDE_DIRS} ${FFTW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${MAINEXE} ${MPI_Fortran_LIBRARIES} ${HDF5_Fortran_LIBRARIES} ${FFTW_LIBRARIES}) # Link hdf5 and mpi
INSTALL(TARGETS ${MAINEXE} DESTINATION bin) # Instruction for installing executable
